# Flashcard

./: .travis.yml  README
client/src/html/: index.html
db/: flashcards_db.sql
server/: LICENSE  server.cabal  stack.yaml
server/app/: Database.hs  Main.hs
src/html/: index.html
