name:                server
version:             0.1.0.0
synopsis:            FlashCards server
description:         Please see README.md
homepage:            http://github.com/vavans/server#readme
license:             BSD3
license-file:        ../LICENSE
author:              Julien V.
maintainer:          ...@gmail.com
copyright:           Julien V.
category:            IT
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Database
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , opaleye
                     , product-profunctors
                     , postgresql-simple
                     , aeson
                     , bytestring
                     , directory
                     , http-types
                     , js-jquery
                     , lucid
                     , random
                     , servant
                     , servant-docs
                     , servant-server
                     , text
                     , time
                     , transformers
                     , transformers-compat
                     , wai
                     , warp
                     , mtl
                     , either
                     , attoparsec
                     , string-conversions
                     , http-media
                     , blaze-markup
                     , blaze-html

  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vavans/server
